dataset1235/2025-2/1955397009/users/1607202972/executions/3239899347_4228375981.log
== SUBMISSION (2025-08-28 12:26:40)
-- CODE: 
float(input(valorEmLibras))
valorEmReais=valorEmLibras*6,13
print(round(valorEmLibras, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(valorEmLibras))
                ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(valorEmLibras))
                ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(valorEmLibras))
                ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(valorEmLibras))
                ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(valorEmLibras))
                ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(input(valorEmLibras))
                ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:56:34)
-- CODE: 
valorEmLibras=float(input())
valorEmReais=valorEmLibras*6.13
print(round(valorEmReais, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
---- user output:
116.47
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
---- user output:
49.04
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
---- user output:
6.13
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
---- user output:
12.26
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
---- user output:
128.73
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
---- user output:
42.91
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:20:13)
-- CODE: 
float(valorEmLibras)
valorEmReais=valorEmLibras*6,13
print(round(valorEmLibras, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
116.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(valorEmLibras)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 2:
---- input:
8
---- correct output:
49.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(valorEmLibras)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
6.13
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(valorEmLibras)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
12.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(valorEmLibras)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 5:
---- input:
21
---- correct output:
128.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(valorEmLibras)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- TEST CASE 6:
---- input:
7
---- correct output:
42.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    float(valorEmLibras)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
